# Multi-Agent-RL-PettingZoo

./: .gitignore  MARL_adversary.ipynb  MARL_final_project.ipynb  MARL_spread.ipynb  README.md  compile.bat  final_presentation copy.aux  final_presentation copy.bcf  final_presentation copy.out  final_presentation copy.tex  final_presentation.aux  final_presentation.bcf  final_presentation.nav  final_presentation.out  final_presentation.run.xml  final_presentation.tex  final_presentation.toc  main.aux  main.bcf  main.out  main.run.xml  main.tex  main.toc  pyproject.toml
latex/: appendix.tex  commands.tex  packages.tex  references.bib
latex/chapters/: content.tex
marl_library/: __init__.py  visualization.py
ppo_marl_tb/PPO_13/: events.out.tfevents.1750596798.BORRELL-LAPTOP.29292.0
ppo_marl_tb/PPO_14/: events.out.tfevents.1750597070.BORRELL-LAPTOP.29292.1
ppo_marl_tb/PPO_17/: events.out.tfevents.1750610271.BORRELL-LAPTOP.25568.0
ppo_marl_tb/PPO_18/: events.out.tfevents.1750623275.BORRELL-LAPTOP.25120.0
ppo_marl_tb/PPO_19/: events.out.tfevents.1750688119.Monovo.7537.0
ppo_marl_tb/PPO_20/: events.out.tfevents.1750774300.BORRELL-LAPTOP.24028.0  events.out.tfevents.1751206764.Monovo.611.0
ppo_marl_tb/PPO_21/: events.out.tfevents.1751206806.Monovo.870.0
ppo_marl_tb/PPO_22/: events.out.tfevents.1751207107.Monovo.1943.0
ppo_marl_tb/PPO_27/: events.out.tfevents.1750794790.BORRELL-LAPTOP.34448.1
ppo_marl_tb/PPO_28/: events.out.tfevents.1750796716.BORRELL-LAPTOP.28524.0
svg-inkscape/: BSE Barcelona Graduate School of Economics_svg-tex.pdf_tex
wandb/run-20250622_145313-lfzeukd8/: run-lfzeukd8.wandb
wandb/run-20250622_145313-lfzeukd8/files/: wandb-metadata.json  wandb-summary.json
wandb/run-20250622_145748-dq84xhrw/: run-dq84xhrw.wandb
wandb/run-20250622_145748-dq84xhrw/files/: wandb-metadata.json  wandb-summary.json
wandb/run-20250622_150042-7vrlwe30/: run-7vrlwe30.wandb
wandb/run-20250622_150042-7vrlwe30/files/: requirements.txt  wandb-metadata.json
wandb/run-20250622_153209-1qbmfnm8/files/: requirements.txt  (+1 more)
wandb/run-20250622_154708-kvepu9qg/: run-kvepu9qg.wandb
wandb/run-20250622_163822-5nd0knm4/: run-5nd0knm4.wandb
wandb/run-20250622_183722-t4o7h1nu/: run-t4o7h1nu.wandb
wandb/run-20250622_183746-bd233mkt/: run-bd233mkt.wandb
wandb/run-20250622_221413-xonveptz/: run-xonveptz.wandb
(+12 files in other folders)
